# orchestrator

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.json  CONTRIBUTING.md  Dockerfile  README.md  build.gradle.kts  cwd.sh  detekt.yml  docker-compose.yml  format.sh  gradle.properties  index.ttl  package.json  rdfc.rb  settings.gradle.kts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
examples/: README.md
lib/: README.md
orchestrator/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
processors/: README.md
processors/shacl-validator-py/: .gitignore  index.ttl  pyproject.toml
processors/shacl-validator-py/rdfc_shacl_validator/: __init__.py  validator.py
processors/shacl-validator-py/src/: validator.py
processors/shacl-validator-py/tests/: validator_test.py
proto/: channel.proto  empty.proto  index.proto  intermediate.proto
rdfc-cli/: build.gradle.kts
rdfc-core/: build.gradle.kts
rdfc-intermediate/: build.gradle.kts
runners/python/: README.md  index.ttl  pyproject.toml
runners/python/rdfc/: __init__.py  main.py
runners/python/rdfc/proto/: channel_pb2.py  channel_pb2.pyi  channel_pb2_grpc.py  empty_pb2_grpc.py  index_pb2.py  index_pb2.pyi  index_pb2_grpc.py  intermediate_pb2.py  intermediate_pb2.pyi  intermediate_pb2_grpc.py
runners/python/rdfc/runtime/: __init__.py
runners/python/rdfc/server/: __init__.py  loader.py  server.py
runners/python/src/proto/: empty_pb2.py  index_pb2.py  index_pb2.pyi  index_pb2_grpc.py  intermediate_pb2.py  intermediate_pb2.pyi
runners/python/src/rdfc/: __init__.py  __main__.py
runners/python/src/rdfc/grpc/: __init__.py  server.py
runners/python/src/rdfc/proto/: channel_pb2_grpc.py  index_pb2.py  index_pb2.pyi
runners/python/src/rdfc/runtime/: arguments.py  processor.py
runners/python/src/rdfc/util/: callback_channel.py  channel.py  dictionary_arguments.py
runners/python/src/runtime/: __init__.py  channel.py  processor.py  runner.py
runners/python/src/server/: loader.py  server.py
runners/python/tests/: echo_test.py
runners/python/tests/processors/: echo.py
(+473 files in other folders)
